--- a/views/partials/topbar.html
+++ b/views/partials/topbar.html
@@ -1,6 +1,7 @@
 {{define "topbar"}}
-<!-- <div id="topbar" class="flex w-full h-16 border-b border-neutral-200 shadow-sm bg-stone-50"> -->
-<div id="topbar" class="flex w-full h-16 border-b border-neutral-200 shadow-sm bg-stone-50 fixed top-0 left-0 z-10">
+<div class="flex justify-center shadown-sm items-center fixed top-0 left-0 w-full z-10">
+<div id="topbar"
+  class="flex max-w-4/5 h-16 border border-neutral-300 rounded-lg bg-stone-50 fixed items-center top-1 z-10">
   <div class="flex items-center justify-start h-full px-4">
     <img width="40" src="/assets/img/logo.png" alt="" />
     <h1 class="text-xl pl-2 text-slate-800">
@@ -51,6 +52,7 @@
       <i class="bx bxl-github text-3xl text-gray-500"></i>
     </a>
   </div>
+</div>
 </div>
 <script>
   // Function to initialize select2
