--- a/views/sections/expenses/index.html
+++ b/views/sections/expenses/index.html
@@ -1,4 +1,4 @@
-<div class="p-5 m-0">
+<div class="p-5 m-0 animate__headShake animate__animated">
   <div id="#filters" hx-get="/expenses/filter" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
   <div id="#table" hx-get="/expenses/table" hx-trigger="revealed" hx-target="this"
