--- a/views/sections/settings/index.html
+++ b/views/sections/settings/index.html
@@ -1,4 +1,4 @@
-<div class="px-5 flex-wrap justify-center w-full w-full">
+<div class="px-5 flex-wrap justify-center w-full w-full animate__headShake animate__animated">
   <div id="telegram" hx-get="/settings/telegram" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
     <div id="users" hx-get="/settings/users" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
