--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -2,56 +2,64 @@
 <div id="table" hx-get="/expenses/table" hx-trigger="reloadExpensesTable from:body" hx-target="this"
   hx-swap="outerHTML">
   <div class="overflow-x-auto">
-    <div id="tableButtons" class="md:block hidden">
-      <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="#filters input, #filters select"
-        hx-vals="js:{users: $('#usersFilter').select2('data').map(function(item){return item.id}).join(','), categories: $('#categoriesFilter').select2('data').map(function(item){return item.id}).join(',')}"
-        class="float-left m-2 mb-3 font-medium {{ if eq .CurrentPage 0 }} text-gray-500 {{else}} hover:text-indigo-900 text-indigo-500 {{end}}"
-        {{ if eq .CurrentPage 0 }} disabled {{end}}>
-        Prev
-      </button>
-      <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="#filters input, #filters select"
-        hx-vals="js:{users: $('#usersFilter').select2('data').map(function(item){return item.id}).join(','), categories: $('#categoriesFilter').select2('data').map(function(item){return item.id}).join(',')}"
-        class="float-left m-2 mb-3 font-medium {{ if eq .CurrentPage .TotalPages }} text-gray-500 {{else}} hover:text-indigo-900 text-indigo-500 {{end}}"
-        {{ if eq .CurrentPage .TotalPages }} disabled {{end}}>
-        Next
-      </button>
-      <span class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400">)</span>
-      <a class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400" href="/export/csv"
-        hx-target="#mitoast" hx-swap="innerHTML">
-        <i class='bx bx-export'></i> CSV
-      </a>
-      <span class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400">|</span>
-      <a class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400" href="/export/json"
-        hx-target="#mitoast" hx-swap="innerHTML">
-        <i class='bx bx-export'></i> JSON
-      </a>
-      <span class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400">(</span>
-      <button class="float-right m-2 mb-3 font-medium text-blue-500 hover:text-blue-400" hx-get="/expenses/add"
-        hx-target="#addRow" hx-swap="outerHTML">
-        <i class='bx bx-plus-medical'></i>New Expense
-      </button>
-      <button id="applyAll" class="float-right m-2 mb-3 font-medium text-indigo-600 hover:text-indigo-500"
-        hx-trigger="click">
-        <i class='bx bx-edit-alt'></i>Apply all
-      </button>
-      <button id="editAll" class="float-right m-2 mb-3 font-medium text-teal-600 hover:text-teal-500"
-        hx-trigger="click">
-        <i class='bx bx-edit-alt'></i>Edit all
-      </button>
-      <div class="float-right m-2 mb-3">
-        <span class="text-sm text-gray-700 dark:text-gray-400">
-          Showing page <span class="font-semibold text-gray-900 dark:text-white">{{ .CurrentPage }}/{{ .TotalPages
-            }}</span>
-          (<span class="text-sm font-semibold text-gray-900-white">{{ .PageSize }}</span> entries)
-        </span>
-      </div>
-    </div>
-    <div class="float-right m-2 mb-3 md:hidden block">
-      (<span class="text-sm font-semibold text-gray-900-white">{{ .PageSize }}</span> entries)
+    <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table"
+      hx-include="#filters input, #filters select"
+      hx-vals="js:{users: $('#usersFilter').select2('data').map(function(item){return item.id}).join(','), categories: $('#categoriesFilter').select2('data').map(function(item){return item.id}).join(',')}"
+      class="float-left m-2 mb-3 font-medium {{ if eq .CurrentPage 0 }} text-gray-500 {{else}} hover:text-indigo-900 text-indigo-500 {{end}}"
+      {{ if eq .CurrentPage 0 }} disabled {{end}}>
+      Prev
+    </button>
+    <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
+      hx-include="#filters input, #filters select"
+      hx-vals="js:{users: $('#usersFilter').select2('data').map(function(item){return item.id}).join(','), categories: $('#categoriesFilter').select2('data').map(function(item){return item.id}).join(',')}"
+      class="float-left m-2 mb-3 font-medium {{ if eq .CurrentPage .TotalPages }} text-gray-500 {{else}} hover:text-indigo-900 text-indigo-500 {{end}}"
+      {{ if eq .CurrentPage .TotalPages }} disabled {{end}}>
+      Next
+    </button>
+    <span class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400">)</span>
+    <a class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400" href="/export/csv"
+      hx-target="#mitoast" hx-swap="innerHTML">
+      <i class='bx bx-export'></i> CSV
+    </a>
+    <span class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400">|</span>
+    <a class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400" href="/export/json"
+      hx-target="#mitoast" hx-swap="innerHTML">
+      <i class='bx bx-export'></i> JSON
+    </a>
+    <span class="float-right m-2 mb-3 font-medium text-gray-500 hover:text-blue-400">(</span>
+
+    <button class="block lg:hidden float-right m-2 mb-3 font-medium text-violet-500 hover:text-blue-400"
+      hx-get="/expenses/addForm" hx-target="#addForm" hx-swap="outerHTML">
+      <i class='bx bx-plus-medical'></i>New Expense
+    </button>
+    <button class="hidden lg:block float-right m-2 mb-3 font-medium text-blue-500 hover:text-blue-400"
+      hx-get="/expenses/addRow" hx-target="#addRow" hx-swap="outerHTML">
+      <i class='bx bx-plus-medical'></i>New Expense
+    </button>
+    <button id="applyAll" class="hidden lg:block float-right m-2 mb-3 font-medium text-indigo-600 hover:text-indigo-500"
+      hx-trigger="click">
+      <i class='bx bx-edit-alt'></i>Apply all
+    </button>
+    <button id="editAll" class="hidden lg:block float-right m-2 mb-3 font-medium text-teal-600 hover:text-teal-500"
+      hx-trigger="click">
+      <i class='bx bx-edit-alt'></i>Edit all
+    </button>
+    <div class="float-right m-2 mb-3 hidden lg:block">
+      <span class="text-sm text-gray-700 dark:text-gray-400">
+        Showing page <span class="font-semibold text-gray-900 dark:text-white">{{ .CurrentPage }}/{{ .TotalPages
+          }}</span>
+        (<span class="text-sm font-semibold text-gray-900-white">{{ .PageSize }}</span> entries)
       </span>
     </div>
+  </div>
+  <div id="addForm">
+  </div>
+  <div class="float-right m-2 mb-3 hidden lg:block">
+    (<span class="text-sm font-semibold text-gray-900-white">{{ .PageSize }}</span> entries)
+    </span>
+  </div>
+  <div class="overflow-x-auto min-w-full">
+
     <table class="min-w-full border bg-neutral-50 shadow-md border-gray-300">
       <thead class="rounded-full ">
         <tr class="bg-gray-100 border border-gray-300 text-gray-700 rounded-lg ">
@@ -104,6 +112,7 @@
       </tbody>
     </table>
   </div>
+</div>
 
-  <br>
+<br>
 </div>
