Better sidebar->topbar

--- a/views/sections/importers/index.html
+++ b/views/sections/importers/index.html
@@ -1,7 +1,5 @@
 <div class="p-5 m-0 flex">
-  <div id="#n26importer" hx-get="/importers/n26" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
-  </div>
-  <div id="#revolutImporter" hx-get="/importers/revolut" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+  <div id="#genericimporter" hx-get="/importers/generic" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
 </div>
 <div class="p-5 m-0">
