--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -25,7 +25,8 @@
 <!-- Main Styling -->
 <link rel="stylesheet" type="css" href="/assets/css/styles.css">
 <!-- Select2 -->
-<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+  integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
@@ -37,6 +38,8 @@
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://unpkg.com/htmx.org/dist/ext/class-tools.js"></script>
 <script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
+
 <!-- Multiselect https://codeshack.io/multi-select-dropdown-html-javascript/#dynamic-creation-with-custom-html-->
 <link href="/assets/css/multiselect.css" rel="stylesheet" type="text/css">
 <script src="/assets/js/multiselect.js"></script>
