--- a/views/sections/importers/generic.html
+++ b/views/sections/importers/generic.html
@@ -7,9 +7,9 @@
         hx-include="#csvOrder,#useRules,#genericCSV" hx-encoding='multipart/form-data'
         hx-vals="js:{users: $('#usersImport').select2('data').map(function(item){return item.id}).join(','), csvOrder: $('#csvOrder')[0].value}"
         hx-post='/importers/generic' hx-target="#mitoast" hx-indicator="#spinner">
-        <!-- <span class="inline-flex items-center justify-center bg-white-200 text-slate-600 py-2 px-6 rounded-md border-1 border-slate-400 border hover:bg-slate-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition duration-200 ease-in-out"> -->
+        <span class="inline-flex items-center justify-center bg-white-200 text-slate-600 py-2 px-6 rounded-md border-1 border-slate-400 border hover:bg-slate-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition duration-200 ease-in-out">
         Import
-        <!-- </span> -->
+        </span>
       </button>
     </div>
 
