--- a/views/partials/topbar.html
+++ b/views/partials/topbar.html
@@ -12,7 +12,7 @@
     <li class="mx-2">
       <button id="sbBtn" hx-trigger="click,{{ .DashboardTrigger }}" hx-get="/dashboard" hx-push-url="true"
         hx-swap="innerHTML" hx-target="#contenido"
-        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
+        class="flex flex-row items-center h-12 transform hover:translate-y-1 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
         <span class="inline-flex text-inherit items-center justify-center h-12 w-12 text-lg text-gray-400"><i
             class="text-inherit bx bxs-dashboard"></i></span>
         <span class="hidden md:inline text-sm font-medium">Dashboard</span>
