--- a/views/partials/topbar.html
+++ b/views/partials/topbar.html
@@ -4,7 +4,7 @@
   class="flex max-w-4/5 h-16 border border-neutral-300 rounded-lg bg-stone-50 fixed items-center top-1 z-10">
   <div class="flex items-center justify-start h-full px-4">
     <img width="40" src="/assets/img/logo.png" alt="" />
-    <h1 class="text-xl pl-2 text-slate-800">
+    <h1 class="text-xl hidden md:inline pl-2 text-slate-800">
       Expense<span style="color: #229364">Mate</span>
     </h1>
   </div>
