--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -2,9 +2,9 @@
 
 <meta charset="UTF-8" />
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8" />
+<meta name="viewport" content="initial-scale=1.0">
 
+<meta charset="UTF-8" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
@@ -12,11 +12,11 @@
 <link rel="manifest" href="/assets/site.webmanifest">
 <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#5bbad5">
 <link rel="shortcut icon" href="/assets/img/favicon.ico">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#349A6A">
+<meta name="msapplication-TileColor" content="#FAFAF9">
+<meta name="theme-color" content="#30404A">
+<meta name="apple-mobile-web-app-status-bar" content="#30404A" />
 
 
-<meta name="apple-mobile-web-app-status-bar" content="#db4938" />
 <title>ExpenseMate 🧉</title>
 <!-- Font Awesome Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
