--- a/views/partials/topbar.html
+++ b/views/partials/topbar.html
@@ -52,7 +52,7 @@
         <i class="bx bxl-github text-3xl text-gray-500"></i>
         <span
           class="absolute -bottom-8 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition-opacity">
-          {{ if .MetaVersion }}{{ .MetaVersion }}{{ else }}Local{{ end }}
+          {{ if .MateVersion }}{{ .MateVersion }}{{ else }}Local{{ end }}
         </span>
       </a>
     </div>
